doc/issue-254
update Windows Tomcat deploy